--- a/src/deda_backend/Cargo.toml
+++ b/src/deda_backend/Cargo.toml
@@ -12,3 +12,5 @@ crate-type = ["cdylib"]
 candid = "0.10"
 ic-cdk = "0.13"
 ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
+ic-cdk-macros = "0.6.0"
+serde = { version = "1.0", features = ["derive"] }
