--- a/src/deda_frontend/package.json
+++ b/src/deda_frontend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@dfinity/agent": "^0.15.7",
+    "@dfinity/auth-client": "^1.4.0",
     "@dfinity/candid": "^0.15.7",
+    "@dfinity/identity": "^1.4.0",
     "@dfinity/principal": "^0.15.7",
     "axios": "^1.7.2",
     "react": "^18.2.0",
