--- a/src/deda_frontend/package.json
+++ b/src/deda_frontend/package.json
@@ -11,17 +11,19 @@
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "@dfinity/agent": "^0.15.7",
-    "@dfinity/auth-client": "^1.4.0",
-    "@dfinity/candid": "^0.15.7",
-    "@dfinity/identity": "^1.4.0",
-    "@dfinity/principal": "^0.15.7",
+    "@dfinity/agent": "^1.4.0",
+    "@dfinity/candid": "^1.4.0",
+    "@dfinity/principal": "^1.4.0",
     "axios": "^1.7.2",
+    "ic-auth": "^0.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@dfinity/auth-client": "^1.4.0",
+    "@dfinity/identity": "^1.4.0",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
