--- a/src/deda_frontend/package.json
+++ b/src/deda_frontend/package.json
@@ -18,6 +18,7 @@
     "ic-auth": "^0.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
