--- a/src/deda_frontend/package.json
+++ b/src/deda_frontend/package.json
@@ -14,8 +14,10 @@
     "@dfinity/agent": "^1.4.0",
     "@dfinity/candid": "^1.4.0",
     "@dfinity/principal": "^1.4.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "ic-auth": "^0.9.1",
+    "ioredis": "^5.4.1",
+    "js-cookies": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.27.0",
